# parktrade

./: .gitignore  pyproject.toml
parktrade/: stock.py  symbol.csv
parktrade/oda/: adata.py  akshare.py
parktrade/opendata/: adata.py  baostock.py  efinance.py
parktrade/tools/: market.py
