[tool.poetry]
name = "parktrade"
version = "0.1.0"
description = ""
authors = ["hanxuanliang <hxuanliang@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
adata = "^1.2.4"
akshare = "^1.12.69"
baostock = "^0.8.8"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
